Fixed particles z-index bug

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -4,6 +4,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 
+/* General Styles */
+* { z-index: 2; }
+.particle, .particle > canvas { z-index: 1 !important; }
+
 /* ========== Navbar ========== */
 .navbar {
   background-color: #000323;
@@ -69,17 +73,14 @@
 }
 
 /* ========== HOMEPAGE ========== */
-#particles-js {
-  position: absolute;
-  width: 100%;
-  z-index: -1;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-color: #000323;
+#particles-js canvas {
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 .container-fluid {
-  z-index: 4;
+    background-color: #000323;
 }
 
 .main-heading {
@@ -156,6 +157,7 @@
 
 .about-page {
   margin: auto 0;
+  padding-bottom: 50px;
 }
 
 .about-heading {
@@ -195,8 +197,7 @@
   display: block;
   height: 100px;
   padding-left: 10px;
-  color: #e53170;
-  /* text-shadow: 0 0 0.1em #e53170; */
+  color: #fb8700;
   animation: spin_words 27s infinite;
 }
 
